Nộp bài tập về nhà nagyf 29

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "cSpell.words": ["fullname", "khác"],
-  "livePreview.defaultPreviewPath": "/onl/bai10/ex07.html"
+  "livePreview.defaultPreviewPath": "/homework/Day-29/ex01.html"
 }
