Nộp bài tập ngày 33

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
-  "cSpell.words": ["fullname", "khác"],
+  "cSpell.words": [
+    "Chúng",
+    "fullname",
+    "khác",
+    "xong"
+  ],
   "livePreview.defaultPreviewPath": "/homework/Day-29/ex01.html"
 }
