Bài tập ngày 34

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,4 @@
 {
-  "cSpell.words": [
-    "Chúng",
-    "fullname",
-    "khác",
-    "xong"
-  ],
+  "cSpell.words": ["Chúng", "fullname", "khác", "tiên", "xong"],
   "livePreview.defaultPreviewPath": "/homework/Day-29/ex01.html"
 }
