--- a/học js/package/package.json
+++ b/học js/package/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"echo \"ok\" ",
+    "make-folder":"mkdir ahihi && cd ahihi && touch test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "sass": "^1.78.0"
+  },
   "dependencies": {
-    "bootstrap": "^5.3.3",
-    "moment": "^2.30.1"
+    "bootstrap": "^4.3"
   }
 }
