Nộp bài tập ngày 56

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
-  "cSpell.words": ["Chúng", "Commandline", "fullname", "khác", "tiên", "xong"],
+  "cSpell.words": [
+    "Chúng",
+    "Commandline",
+    "fullname",
+    "khác",
+    "tiên",
+    "toastify",
+    "xong"
+  ],
   "livePreview.defaultPreviewPath": "/homework/Day-29/ex01.html",
   "liveServer.settings.port": 5501
 }
